--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
 PORT=10007
-
-
-
-
+MONGO_URI=mongodb+srv://khalid:NCGRP123@hospital-cluster.j73qo70.mongodb.net/hospitalDB?retryWrites=true&w=majority
 
