Fix: Added DB name to MONGO_URI

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-MONGO_URI=mongodb+srv://khalid:NCGRP123@hospital-cluster.j73qo70.mongodb.net/hospitalDB?retryWrites=true&w=majority
-
+MONGO_URI=mongodb+srv://khalid:NCGRP123@hospital-cluster.j73qo70.mongodb.net/khalidDB?retryWrites=true&w=majority
