--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -1,4 +1,4 @@
-name: Terraform CI/CD
+name: Terraform Deployment
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   terraform:
-    name: Terraform Deploy
+    name: 'Terraform Plan and Apply'
     runs-on: ubuntu-latest
 
     env:
@@ -21,16 +21,14 @@ jobs:
 
     defaults:
       run:
-        working-directory: terraform
+        working-directory: ./terraform
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
 
       - name: Terraform Init
         run: terraform init
@@ -40,3 +38,4 @@ jobs:
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
+
