--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
 
     - name: Run tests
       run: npm test
+      env:
+        MONGO_URI: ${{ secrets.MONGO_URI }}
 
     - name: Deploy to Azure Web App
       if: success()
