--- a/.github/workflows/deploy-iac.yml
+++ b/.github/workflows/deploy-iac.yml
@@ -7,9 +7,6 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
-    env:
-      MONGO_URI: ${{ secrets.MONGO_URI }}
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -23,10 +20,10 @@ jobs:
       run: npm install
 
     - name: Debug MONGO_URI
-      run: echo "MONGO_URI is: $MONGO_URI"
+      run: echo "MONGO_URI=${{ secrets.MONGO_URI }}"
 
-    - name: Run tests
-      run: npm test
+    - name: Run tests with MONGO_URI
+      run: MONGO_URI="${{ secrets.MONGO_URI }}" npm test
 
     - name: Deploy to Azure Web App (IaC)
       uses: azure/webapps-deploy@v2
