--- a/.github/workflows/deploy-iac.yml
+++ b/.github/workflows/deploy-iac.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
@@ -19,18 +19,10 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Verify MONGO_URI is present in secrets
-      run: echo "MONGO_URI secret is set: ${{ secrets.MONGO_URI != '' }}"
-
-    - name: Run tests with inline injected MONGO_URI
-      run: |
-        echo "Starting test with MONGO_URI env injected inline"
-        echo "::add-mask::${{ secrets.MONGO_URI }}"
-        MONGO_URI="${{ secrets.MONGO_URI }}" NODE_ENV=test mocha
-      shell: bash
+    - name: Run tests with MONGO_URI
+      run: MONGO_URI=${{ secrets.MONGO_URI }} npm test
 
     - name: Deploy to Azure Web App (IaC)
-      if: success()
       uses: azure/webapps-deploy@v2
       with:
         app-name: hospitalroommanagement-iac
