--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -1,42 +1,42 @@
-name: Terraform IaC Deployment
+#name: Terraform IaC Deployment
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#
+#jobs:
+#  terraform:
+#    name: 'Terraform Plan and Apply'
+#    runs-on: ubuntu-latest
 
-on:
-  push:
-    branches:
-      - main
+#    env:
+#      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+#      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+#      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+#      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
-jobs:
-  terraform:
-    name: 'Terraform Plan and Apply'
-    runs-on: ubuntu-latest
+#    defaults:
+#      run:
+#        working-directory: terraform
 
-    env:
-      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+#    steps:
+#    - name: Checkout repository
+#      uses: actions/checkout@v3
 
-    defaults:
-      run:
-        working-directory: terraform
+#    - name: Set up Terraform
+#      uses: hashicorp/setup-terraform@v3
+#      with:
+#        terraform_version: 1.6.6
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+#    - name: Terraform Init
+#      run: terraform init
 
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_version: 1.6.6
+#    - name: Terraform Validate
+#      run: terraform validate
 
-    - name: Terraform Init
-      run: terraform init
+#    - name: Terraform Plan
+#      run: terraform plan
 
-    - name: Terraform Validate
-      run: terraform validate
-
-    - name: Terraform Plan
-      run: terraform plan
-
-    - name: Terraform Apply (Auto Approve)
-      run: terraform apply -auto-approve
+#    - name: Terraform Apply (Auto Approve)
+#      run: terraform apply -auto-approve
