--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Khalid Alsayed",
   "license": "ISC",
   "dependencies": {
+    "applicationinsights": "^3.6.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "chai": "^4.3.7",
